--- a/SpringBootDemo/src/main/resources/application.properties
+++ b/SpringBootDemo/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+
+
+welcome.message = Hello Nithin Welcome to Complete SpringBoot Demo
+
 spring.datasource.url=jdbc:mysql://localhost:3306/DSMS?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false
 spring.datasource.username=root
 spring.datasource.password=root
